// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventHeader component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      false,
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
          "fontSize": 14,
          "fontWeight": "600",
          "marginBottom": -2,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 10,
        }
      }
    >
      @
      userName
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "bottom": -2,
          "color": "#FFFFFF",
          "fontSize": 12,
          "left": 10,
          "position": "absolute",
        }
      }
    >
      7 days ago
    </Text>
  </View>
  <Image
    source={
      Object {
        "uri": "InstagramIcon",
      }
    }
    style={
      Object {
        "height": 30,
        "position": "absolute",
        "right": 9,
        "top": 9,
        "width": 30,
      }
    }
  />
</View>
`;

exports[`EventHeader component renders correctly when overlayed 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 750,
        "zIndex": 2,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#7ED321",
          "fontSize": 14,
          "fontWeight": "600",
          "marginBottom": -2,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 10,
        }
      }
    >
      @
      userName
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "bottom": -2,
          "color": "#FFFFFF",
          "fontSize": 12,
          "left": 10,
          "position": "absolute",
        }
      }
    >
      7 days ago
    </Text>
  </View>
  <Image
    source={
      Object {
        "uri": "InstagramIcon",
      }
    }
    style={
      Object {
        "height": 30,
        "position": "absolute",
        "right": 9,
        "top": 9,
        "width": 30,
      }
    }
  />
</View>
`;
